@@ -13,6 +13,8 @@ package pathfinder;
 
 import pathfinder.datastructures.Path;
 
+import pathfinder.datastructures.Point;
+
 import java.util.Map;
 
 /*
@@ -30,7 +32,7 @@ different ways, without requiring a lot of work to change things over.
  * This interface represents the API that the text interface
  * view/controller require models to implement.
  */
-public interface ModelAPI<E> {
+public interface ModelAPI {
 
     // Note: Do not change any of these method specifications, since code inside the view
     // and controller depend on this API.
@@ -66,7 +68,7 @@ public interface ModelAPI<E> {
      *                                  {@literal null}, or not valid short names of buildings in
      *                                  this campus map.
      */
-    public Path<E> findShortestPath(String startShortName, String endShortName);
+    public Path<Point> findShortestPath(String startShortName, String endShortName);
     // You'll need to change this return type to use the generic Path once you've
     // updated the Path ADT to be generic.
 
