@@ -12,7 +12,6 @@
 package pathfinder.textInterface;
 
 import pathfinder.CampusMap;
-import pathfinder.datastructures.Point;
 
 /**
  * Pathfinder represents a complete application capable of responding to user prompts to provide
@@ -28,7 +27,7 @@ public class Pathfinder {
      * @param args The command-line arguments provided to the system.
      */
     public static void main(String[] args) {
-        CampusMap<Point> map = new CampusMap<>();
+        CampusMap map = new CampusMap();
         TextInterfaceView view = new TextInterfaceView();
         TextInterfaceController controller = new TextInterfaceController(map, view);
         //
