@@ -30,7 +30,7 @@ public class TextInterfaceController implements InputHandler {
     /**
      * The data-carrier and processor for the application.
      */
-    private ModelAPI<Point> model;
+    private ModelAPI model;
 
     /**
      * The user-facing view and input receiver for this application.
@@ -44,7 +44,7 @@ public class TextInterfaceController implements InputHandler {
      * @param model A model to use for computation and data.
      * @param view  A view to use to display data to the user.
      */
-    public TextInterfaceController(ModelAPI<Point> model, TextInterfaceView view) {
+    public TextInterfaceController(ModelAPI model, TextInterfaceView view) {
         this.model = model;
         this.view = view;
     }
